<resources>
    <string name="app_name">PlaylistMaker_App</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="Search">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="Darktheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="MessagetoDevelopers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="ThanksDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="linkAndroidDeveloper">https://yandex.ru/legal/practicum_offer/</string>
    <string name="letsLaunchApp">Скачайте это крутое приложение: \'https://practicum.yandex.ru/android-developer/\'</string>
    <string name="yesteday_remastered_2009">Yesterday (Remastered 2009)</string>
    <string name="the_beatles">The Beatles</string>
    <string name="timeOfTrack">2:55</string>
    <string name="nothingSearch">"Ничего не нашлось"</string>
    <string name="ErrorSearch">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>