<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/frame16"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_maker"
        android:textSize="@dimen/textSize22"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/YP_White"
        android:layout_marginVertical="12dp"
        android:textStyle="bold"
        android:paddingBottom="24dp">
    </TextView>

    <Button
        style="@style/MainScreenButton"
        android:id="@+id/firstButton"
        android:text="@string/Search"
        app:cornerRadius="@dimen/radiusButton"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_Black"
        app:iconPadding="@dimen/padIcon">
    </Button>

    <Button
        style="@style/MainScreenButton"
        android:id="@+id/secondButton"
        android:text="@string/Media"
        app:cornerRadius="@dimen/radiusButton"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_Black"
        app:iconPadding="@dimen/padIcon">
    </Button>

    <Button
        style="@style/MainScreenButton"
        android:id="@+id/thirdButton"
        android:text="@string/Settings"
        android:layout_marginBottom="28dp"
        app:cornerRadius="@dimen/radiusButton"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_Black"
        app:iconPadding="@dimen/padIcon">
    </Button>
</LinearLayout>

