<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/ButtonBackSize"
            android:layout_height="@dimen/ButtonBackSize"
            android:src="@drawable/back"
            app:tint="?attr/colorSecondary"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:iconGravity="textStart"
            android:backgroundTint="?attr/colorOnPrimary">
        </ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize22"
            android:paddingStart="12dp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/Settings">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/frame16"
        android:gravity="center_vertical">

        <TextView
            android:paddingVertical="@dimen/paddingForText"
            android:layout_width="@dimen/heightForWeight"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/textSize16"
            android:text="@string/Darktheme">
        </TextView>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </com.google.android.material.switchmaterial.SwitchMaterial>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/frame16"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:paddingVertical="@dimen/paddingForText"
            android:layout_width="@dimen/heightForWeight"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/textSize16"
            android:text="@string/shareApp">
        </TextView>
        <ImageButton
            style="@style/IconsSettings"
            android:id="@+id/shareButton"
            android:src="@drawable/share"
            app:tint="?attr/iconDarkThemeSettings">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/frame16"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:paddingVertical="@dimen/paddingForText"
            android:layout_width="@dimen/heightForWeight"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/textSize16"
            android:text="@string/support">
        </TextView>
        <ImageButton
            style="@style/IconsSettings"
            android:id="@+id/supportButton"
            android:src="@drawable/support"
            app:tint="?attr/iconDarkThemeSettings">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/frame16"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:paddingVertical="@dimen/paddingForText"
            android:layout_width="@dimen/heightForWeight"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/textSize16"
            android:text="@string/user_agreement">
        </TextView>
        <ImageButton
            style="@style/IconsSettings"
            android:id="@+id/buttonRight"
            android:src="@drawable/right"
            app:tint="?attr/iconDarkThemeSettings">
        </ImageButton>
    </LinearLayout>
</LinearLayout>