<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/m8MarPadd"
    android:paddingBottom="@dimen/m8MarPadd"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    tools:ignore="RtlSymmetry">
    <ImageView
        android:id="@+id/beatlesImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/placeholder"
        android:background="?attr/colorPrimaryVariant">
    </ImageView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/m8MarPadd"
        android:paddingEnd="@dimen/frame16">

        <TextView
            android:id="@+id/NameOfSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/yesteday_remastered_2009">
        </TextView>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nameOfAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/iconDarkThemeSettings"
                android:textSize="11sp"
                android:text="@string/the_beatles">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic"
                app:tint="?attr/iconDarkThemeSettings">
            </ImageView>

            <TextView
                android:id="@+id/timeOfSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="?attr/iconDarkThemeSettings"
                android:text="@string/timeOfTrack">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right"
        android:background="@android:color/transparent"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:tint="?attr/iconDarkThemeSettings">
    </ImageButton>

</LinearLayout>
