<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/frame16"
    android:paddingEnd="@dimen/frame16"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bttnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/minus16Pad"
        android:layout_marginStart="@dimen/minus16Pad"
        style="@style/styleForText"
        app:title="@string/Search"
        app:navigationIconTint="?attr/colorSecondary"
        android:layout_marginBottom="@dimen/frame16"
        app:navigationIcon="@drawable/back"
        app:contentInsetStartWithNavigation="12dp">
    </com.google.android.material.appbar.MaterialToolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/frame16">
        <EditText
            android:id="@+id/searchLine"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/Search"
            android:gravity="center_vertical"
            android:textColorHint="?attr/searchEditTextColor"
            android:paddingStart="12dp"
            android:drawablePadding="@dimen/m8MarPadd"
            android:drawableStart="@drawable/searchline_icon"
            android:inputType="text"
            android:lines="1"
            android:textCursorDrawable="@color/YP_Blue"
            android:background="@drawable/bg_edit_text"
            tools:ignore="RtlSymmetry"
            app:drawableTint="?attr/searchEditTextColor">
        </EditText>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/clear"
            android:visibility="gone">
        </ImageView>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessLeaf">
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/YP_Light_Grey"
        android:layout_marginStart="@dimen/minus16Pad"
        android:layout_marginEnd="@dimen/minus16Pad"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/minus16Pad"
        android:layout_marginEnd="@dimen/minus16Pad">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/minus8Mar"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/btnSearch"
                style="@style/ButtonOnMenuOfSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/active_search"
                android:backgroundTint="?attr/colorOnSecondary"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:layout_marginTop="@dimen/minus8Mar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Search"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="@color/YP_Blue"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/m8MarPadd"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/minus8Mar"
            android:padding="0dp">
            <ImageButton
                android:id="@+id/btnMedia"
                style="@style/ButtonOnMenuOfSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/medicon"
                android:scaleType="centerInside"
                android:backgroundTint="?attr/colorOnSecondary"
                android:layout_marginTop="@dimen/minus8Mar"
                app:tint="?attr/colorSecondary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Media"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="?attr/colorSecondary"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/m8MarPadd"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/minus8Mar"
            android:backgroundTint="?attr/colorOnSecondary"
            android:padding="0dp">
            <ImageButton
                android:id="@+id/btnSett"
                style="@style/ButtonOnMenuOfSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/setticon"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="?attr/colorOnSecondary"
                android:layout_marginTop="@dimen/minus8Mar"
                app:tint="?attr/colorSecondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Settings"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="?attr/colorSecondary"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/m8MarPadd"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
